--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="row" id="main">
-    <section class="moves" id="player-section">
+    <section id="player-section">
       <button type="button" class="btn" id="rock-btn" value="rock" onclick="playRound('Rock')">
         <img src="image/rock.png" class="night-vision-effect">
       </button>
